hphp/test/zend/good/ext/spl/tests/DirectoryIterator_by_reference.php
<?php
$it = new DirectoryIterator(__DIR__); 
foreach( $it as &$file ) {
	echo $file . "\n";
}
?>