hphp/test/zend/bad/Zend/tests/bug60350.php
<?php
$str = "\e";
if (ord($str) == 27) {
    echo "Works";
}
?>